--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <script src='https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v3.9.4/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-    <div id="my-map" class="map-container"></div>
+    <div class="container">
+        <h1>Map of Pet Stores Near Moozda</h1> <!--title of website -->
+        <div class="background"> <!-- creates a background to enclose the legend-->
+            <p>
+                <br>
+                <b>legend </b><br>
+            <div class="pet-circle"></div> pet store locations <br><br> <!--placeholders for shapes designed in css file-->
+            <div class="bike-circle"></div> bike dock locations <br><br>
+            <div class="moos-house"></div> moozda's location <br><br>
+            </p>
+        </div> <!--delimitates the information within the background box-->
+        <div id="my-map" class="map-container"></div> <!-- reference to map-->
+        <p>
+        <div class="mx-auto" style="width: 800px;"> <!--bootstrap code used to centre the text-->
+            zoom out to see pet store locations
+        </div>
+        </p>
+    </div>
     <script src="script.js"></script>
 </body>
 
